<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#597894" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ededed"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp"
            android:scrollbars="vertical" >

            <!--
                 <TextView
                android:id="@+id/tvHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/blank_string"
                android:textColor="#000000"
                android:textSize="12sp"
                android:textStyle="bold"
                android:visibility="gone" />-->
                
            <android.support.v4.view.ViewPager
                android:id="@+id/myviewpager"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                />

            <RelativeLayout
                android:id="@+id/viewPagerIndicator"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="5dp"
                 >

                <LinearLayout
                    android:id="@+id/viewPagerCountDots"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal" >
                </LinearLayout>
            </RelativeLayout>

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/myviewpager"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:text="@string/about_us"
                android:textColor="#597894"
                android:textSize="26sp" />

            <ImageView
                android:id="@+id/rule"
                android:layout_width="fill_parent"
                android:layout_height="6dp"
                android:layout_below="@id/tv1"
                android:contentDescription="@string/app_name"
                android:src="@drawable/divider" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rule"
                android:layout_marginTop="5dp"
                android:text="@string/about_us_info"
                android:textColor="#597894"
                android:textSize="20sp" />
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#597894"
        android:orientation="vertical"
        android:padding="5dp" >

        <!--
          <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            android:textColor="#000000"
            android:textSize="24sp" /> -->

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>